# fastapi_booking

./: README.md  main.py  pyproject.toml
app/: config.py  exceptions.py
app/bookings/: models.py  router.py  schemas.py  service.py
app/hotels/: models.py
app/service/: base.py
app/users/: auth.py  dependencies.py  models.py  router.py  service.py
migrations/: env.py
