[tool.poetry]
name = "fastapi-booking"
version = "0.1.0"
description = ""
authors = ["PIL\\PIL <pil@sinetic.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
asyncpg = "^0.29.0"
psycopg = "^3.1.19"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
